// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Feature renders checkmark emoji 1`] = `
<div
  className="css-pat51 css-vlxvfg"
>
  <Checkmark
    reasonProps={0}
  />
  <h3>
    A feature
  </h3>
</div>
`;

exports[`Feature renders soon emoji 1`] = `
<div
  className="css-pat51 css-vlxvfg"
>
  <Soon
    reasonProps={0}
  />
  <h3>
    A feature
  </h3>
</div>
`;
